--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -145,6 +145,7 @@
     font-weight: 400;
     margin-top: 20px;
     margin-bottom: -70px;
+    color: #EFE9E7;
 }
 
 .project-icons {
@@ -204,6 +205,7 @@
   .github-sub {
       margin-top: 10px;
       font-size: 20px;
+      color: #EFE9E7;
   }
 
   @media (max-width: 760px) {
